# jamf-pro-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback.md
.github/workflows/: main_pr_tests.yaml  publish_docs.yaml  publish_pypi.yaml
docs/: conf.py  index.rst
docs/_ext/: apioptions.py
docs/contributors/: index.rst  playground.rst
docs/reference/: clients.rst  clients_classic.rst  clients_jcds2.rst  clients_pro.rst  clients_webhooks.rst  credentials.rst  helpers.rst  index.rst  models_classic.rst  models_pro.rst  models_webhooks.rst  webhook_generators.rst
docs/user/: advanced.rst  basic_classic.rst  basic_pro.rst  classic_api.rst  getting_started.rst  index.rst  jcds2.rst  pro_api.rst
docs/webhooks/: index.rst  webhook_models.rst  webhook_receiver.rst  webhooks_client.rst
src/jamf_pro_sdk/: __about__.py  __init__.py  exceptions.py  helpers.py
src/jamf_pro_sdk/clients/: __init__.py  auth.py  classic_api.py  jcds2.py  webhooks.py
src/jamf_pro_sdk/clients/pro_api/: __init__.py  api_options.py  pagination.py
src/jamf_pro_sdk/models/: __init__.py  client.py
src/jamf_pro_sdk/models/classic/: __init__.py  advanced_computer_searches.py  categories.py  computer_groups.py  computers.py  criteria.py  network_segments.py  packages.py  sites.py
src/jamf_pro_sdk/models/pro/: __init__.py  api_options.py  computers.py  jcds2.py  mdm.py  mobile_devices.py  packages.py  scripts.py
src/jamf_pro_sdk/models/webhooks/: __init__.py  webhooks.py
tests/: utils.py
tests/integration/: conftest.py  test_classic_client_computers.py  test_client_auth.py  test_pro_client_computers.py  test_pro_client_mobile_devices.py  test_pro_client_packages.py
tests/models/: test_models_classic_categories.py  test_models_classic_computer_groups.py  test_models_classic_computers.py  test_models_classic_network_segments  test_models_classic_network_segments.py  test_models_classic_sites.py  test_models_pro_scripts.py
tests/unit/: test_pro_api_expressions.py  test_webhooks_faker.py
tests/unit/models/: test_models_classic_categories.py  test_models_classic_computer_groups.py  test_models_classic_computers.py  test_models_classic_network_segments.py  test_models_classic_utils.py
