[project]
name = "jamf-pro-sdk"
dynamic = ["readme", "version"]
description = "Jamf Pro SDK for Python"
keywords = ["jamf", "pro", "jss", "jps"]
license = {text = "MIT"}
requires-python = ">=3.9, <4"
dependencies = [
    "requests>=2.28.1,<3",
    "pydantic>=2,<3",
    "dicttoxml>=1.7.16,<2",
    "defusedxml"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.urls]
Documentation = "https://macadmins.github.io/jamf-pro-sdk-python"
Source = "https://github.com/macadmins/jamf-pro-sdk-python"
Changelog = "https://github.com/macadmins/jamf-pro-sdk-python/blob/main/CHANGELOG.md"


[project.optional-dependencies]
aws = [
    "boto3>=1.26.45,<2"
]
macOS = [
    "keyring>=23.13.1"
]
webhooks = [
    "polyfactory>=2.1.1,<3"
]
dev = [
    "boto3>=1.26.45,<2",
    "keyring>=23.13.1",
    "polyfactory>=2.1.1,<3",
    "ruff",
    "coverage[toml]",
    "pytest >= 6",
    "pytest-cov",
    "deepdiff",
    "sphinx",
    "autodoc-pydantic",
    "furo",
    "build"
]


[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"jamf_pro_sdk" = ["py.typed"]


[tool.setuptools.dynamic]
version = {attr = "jamf_pro_sdk.__about__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}


[tool.ruff]
line-length = 100
target-version = "py39"
src = [
    "src",
    "tests"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E101",
    "F401",
    "F403",
    "I001",
    "N801",
    "N802",
    "N806"
]
per-file-ignores = {"__init__.py" = ["F401"]}


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--durations=5",
    "--color=yes",
    "--cov=src",
    "--cov-report=html:coverage/htmlcov",
    "--cov-report=term-missing",
#    "--cov-fail-under=90",
]
testpaths = [ "./tests" ]


#[tool.coverage.run]
#source = ["src", "jamf_pro_sdk"]
#branch = true
#parallel = true


#[tool.coverage.report]
#show_missing = true
# Uncomment the following line to fail to build when the coverage is too low
# fail_under = 99

#[tool.coverage.xml]
#output = "coverage/coverage.xml"

#[tool.coverage.html]
#directory = "coverage/htmlcov"
